test/errors/error17.base
The following modules have circular dependencies: Error17_b, Error17
